--- a/examples/07-llm-summarizer/air/manifest.air.json
+++ b/examples/07-llm-summarizer/air/manifest.air.json
@@ -8,6 +8,12 @@
       "name": "demo/LlmSummarizerState@1"
     },
     {
+      "name": "demo/LlmSummarizerStart@1"
+    },
+    {
+      "name": "demo/LlmSummarizerSummaryReady@1"
+    },
+    {
       "name": "demo/LlmSummarizerEvent@1"
     },
     {
