--- a/examples/00-counter/air/manifest.air.json
+++ b/examples/00-counter/air/manifest.air.json
@@ -8,6 +8,12 @@
       "name": "demo/CounterState@1"
     },
     {
+      "name": "demo/CounterStart@1"
+    },
+    {
+      "name": "demo/CounterTick@1"
+    },
+    {
       "name": "demo/CounterEvent@1"
     }
   ],
