--- a/examples/02-blob-echo/air/manifest.air.json
+++ b/examples/02-blob-echo/air/manifest.air.json
@@ -8,6 +8,9 @@
       "name": "demo/BlobEchoState@1"
     },
     {
+      "name": "demo/BlobEchoStart@1"
+    },
+    {
       "name": "demo/BlobEchoEvent@1"
     },
     {
