--- a/examples/06-safe-upgrade/air.v1/manifest.air.json
+++ b/examples/06-safe-upgrade/air.v1/manifest.air.json
@@ -8,6 +8,12 @@
       "name": "demo/SafeUpgradeState@1"
     },
     {
+      "name": "demo/SafeUpgradeStart@1"
+    },
+    {
+      "name": "demo/SafeUpgradeNotifyComplete@1"
+    },
+    {
       "name": "demo/SafeUpgradeEvent@1"
     },
     {
