--- a/crates/aos-sys/Cargo.toml
+++ b/crates/aos-sys/Cargo.toml
@@ -29,6 +29,7 @@ path = "src/bin/cap_enforce_llm_basic.rs"
 
 [dependencies]
 aos-wasm-sdk = { path = "../aos-wasm-sdk" }
+aos-wasm-abi = { path = "../aos-wasm-abi" }
 serde = { version = "1", features = ["derive"] }
 serde_cbor = "0.11"
 serde_bytes = "0.11"
