--- a/crates/aos-wasm/Cargo.toml
+++ b/crates/aos-wasm/Cargo.toml
@@ -13,5 +13,6 @@ log = "0.4"
 
 [dev-dependencies]
 serde = { version = "1", features = ["derive"] }
+serde_cbor = "0.11"
 wat = "1"
 tempfile = "3"
