--- a/examples/01-hello-timer/air/manifest.air.json
+++ b/examples/01-hello-timer/air/manifest.air.json
@@ -29,11 +29,7 @@
     }
   ],
   "plans": [],
-  "caps": [
-    {
-      "name": "sys/timer@1"
-    }
-  ],
+  "caps": [],
   "policies": [
     {
       "name": "demo/default_policy@1"
@@ -50,13 +46,6 @@
         }
       }
     ]
-  },
-  "module_bindings": {
-    "demo/TimerSM@1": {
-      "slots": {
-        "timer": "timer_grant"
-      }
-    }
   },
   "routing": {
     "events": [
