--- a/examples/04-aggregator/air/manifest.air.json
+++ b/examples/04-aggregator/air/manifest.air.json
@@ -67,11 +67,11 @@
                 }
               ]
             },
-            "verbs": {
-              "set": [
-                {
-                  "text": "GET"
-                }
+        "methods": {
+          "set": [
+            {
+              "text": "GET"
+            }
               ]
             }
           }
