--- a/crates/aos-cli/Cargo.toml
+++ b/crates/aos-cli/Cargo.toml
@@ -15,8 +15,10 @@ camino = "1"
 clap = { version = "4", features = ["derive", "env"] }
 hex = "0.4"
 base64 = "0.22"
+ignore = "0.4"
 serde_json = "1"
 serde_cbor = "0.11"
+tar = "0.4"
 tokio = { version = "1", features = ["full", "signal"] }
 anyhow = "1"
 tracing = "0.1"
