--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 .DS_Store
 .store/
 .aos/
+notes-world/
 
 # ===========================================================================
 # Rust.gitignore
