--- a/crates/aos-cli/Cargo.toml
+++ b/crates/aos-cli/Cargo.toml
@@ -27,6 +27,7 @@ jsonschema = "0.17"
 aos-cbor = { path = "../aos-cbor" }
 serde = { version = "1", features = ["derive"] }
 walkdir = "2"
+ignore = "0.4"
 
 [dev-dependencies]
 anyhow = "1"
