--- a/crates/aos-host/Cargo.toml
+++ b/crates/aos-host/Cargo.toml
@@ -45,6 +45,7 @@ reqwest = { version = "0.11", features = ["json"], optional = true }
 url = { version = "2", optional = true }
 once_cell = "1"
 jsonschema = "0.17"
+axum = { version = "0.7", features = ["macros", "json"] }
 
 [dev-dependencies]
 aos-air-exec = { path = "../aos-air-exec" }
