--- a/crates/aos-host/Cargo.toml
+++ b/crates/aos-host/Cargo.toml
@@ -45,7 +45,8 @@ reqwest = { version = "0.11", features = ["json"], optional = true }
 url = { version = "2", optional = true }
 once_cell = "1"
 jsonschema = "0.17"
-axum = { version = "0.7", features = ["macros", "json"] }
+axum = { version = "0.8.8", features = ["macros", "json"] }
+utoipa = "5.4"
 
 [dev-dependencies]
 aos-air-exec = { path = "../aos-air-exec" }
