--- a/crates/aos-host/Cargo.toml
+++ b/crates/aos-host/Cargo.toml
@@ -47,6 +47,7 @@ once_cell = "1"
 jsonschema = "0.17"
 axum = { version = "0.8.8", features = ["macros", "json"] }
 utoipa = "5.4"
+utoipa-swagger-ui = { version = "9", features = ["axum"] }
 
 [dev-dependencies]
 aos-air-exec = { path = "../aos-air-exec" }
