--- a/apps/shell/package.json
+++ b/apps/shell/package.json
@@ -7,9 +7,11 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
+    "openapi:types": "openapi-typescript http://localhost:7777/api/openapi.json -o src/sdk/types.ts",
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.90.18",
     "react": "^19.2.0",
     "react-dom": "^19.2.0"
   },
@@ -23,6 +25,7 @@
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.24",
     "globals": "^16.5.0",
+    "openapi-typescript": "^7.9.0",
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.46.4",
     "vite": "^7.2.4"
