--- a/apps/shell/package.json
+++ b/apps/shell/package.json
@@ -13,7 +13,8 @@
   "dependencies": {
     "@tanstack/react-query": "^5.90.18",
     "react": "^19.2.0",
-    "react-dom": "^19.2.0"
+    "react-dom": "^19.2.0",
+    "react-router-dom": "^7.12.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
