--- a/apps/shell/package.json
+++ b/apps/shell/package.json
@@ -20,6 +20,7 @@
     "@tailwindcss/vite": "^4.1.18",
     "@tanstack/react-query": "^5.90.18",
     "@xyflow/react": "^12.10.0",
+    "cborg": "^4.5.8",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dagre": "^0.8.5",
