--- a/apps/demiurge/reducer/Cargo.toml
+++ b/apps/demiurge/reducer/Cargo.toml
@@ -12,6 +12,7 @@ crate-type = ["cdylib"]
 aos-wasm-sdk = { path = "../../../crates/aos-wasm-sdk" }
 serde = { version = "1", features = ["derive"] }
 serde_cbor = "0.11"
+serde_bytes = "0.11"
 
 [dev-dependencies]
 aos-wasm-abi = { path = "../../../crates/aos-wasm-abi" }
