--- a/apps/demiurge/reducer/Cargo.toml
+++ b/apps/demiurge/reducer/Cargo.toml
@@ -13,6 +13,9 @@ aos-wasm-sdk = { path = "../../../crates/aos-wasm-sdk" }
 serde = { version = "1", features = ["derive"] }
 serde_cbor = "0.11"
 serde_bytes = "0.11"
+serde_json = { version = "1", default-features = false, features = ["alloc"] }
+sha2 = { version = "0.10", default-features = false }
+hex = { version = "0.4", default-features = false }
 
 [dev-dependencies]
 aos-wasm-abi = { path = "../../../crates/aos-wasm-abi" }
