--- a/crates/aos-host/Cargo.toml
+++ b/crates/aos-host/Cargo.toml
@@ -57,3 +57,6 @@ wat = "1"
 sha2 = "0.10"
 hex = "0.4"
 serde_bytes = "0.11"
+aos-wasm-build = { path = "../aos-wasm-build" }
+camino = "1"
+dotenvy = "0.15"
