--- a/apps/demiurge/reducer/Cargo.toml
+++ b/apps/demiurge/reducer/Cargo.toml
@@ -15,7 +15,7 @@ serde_cbor = "0.11"
 serde_bytes = "0.11"
 serde_json = { version = "1", default-features = false, features = ["alloc"] }
 sha2 = { version = "0.10", default-features = false }
-hex = { version = "0.4", default-features = false }
+hex = { version = "0.4", default-features = false, features = ["alloc"] }
 
 [dev-dependencies]
 aos-wasm-abi = { path = "../../../crates/aos-wasm-abi" }
