plan based tool refs

--- a/apps/demiurge/air/manifest.air.json
+++ b/apps/demiurge/air/manifest.air.json
@@ -279,6 +279,9 @@
       "name": "sys/workspace.resolve@1"
     },
     {
+      "name": "sys/workspace.read_ref@1"
+    },
+    {
       "name": "sys/workspace.read_bytes@1"
     },
     {
