--- a/apps/demiurge/air/manifest.air.json
+++ b/apps/demiurge/air/manifest.air.json
@@ -47,6 +47,12 @@
       "name": "demiurge/ToolRegistrySnapshot@1"
     },
     {
+      "name": "demiurge/ToolRegistryUnchanged@1"
+    },
+    {
+      "name": "demiurge/ToolError@1"
+    },
+    {
       "name": "demiurge/ToolCallParams@1"
     },
     {
