--- a/apps/demiurge/air/manifest.air.json
+++ b/apps/demiurge/air/manifest.air.json
@@ -200,7 +200,7 @@
             "models": {
               "set": [
                 {
-                  "text": "gpt-4o-mini"
+                  "text": "gpt-5.2"
                 }
               ]
             },
