--- a/crates/aos-host/Cargo.toml
+++ b/crates/aos-host/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2024"
 # networked dependencies. They are ON by default.
 default = ["adapter-http", "adapter-llm"]
 adapter-http = ["reqwest", "url"]
-adapter-llm = ["reqwest"]
+adapter-llm = ["aos-llm"]
 test-fixtures = ["aos-air-exec", "aos-wasm-abi", "indexmap", "wat", "sha2"]
 
 [dependencies]
@@ -18,6 +18,7 @@ aos-cbor = { path = "../aos-cbor" }
 aos-store = { path = "../aos-store" }
 aos-air-types = { path = "../aos-air-types" }
 aos-sys = { path = "../aos-sys" }
+aos-llm = { path = "../aos-llm", optional = true }
 
 walkdir = "2"
 log = "0.4"
