--- a/crates/aos-smoke/fixtures/00-counter/reducer/Cargo.toml
+++ b/crates/aos-smoke/fixtures/00-counter/reducer/Cargo.toml
@@ -9,5 +9,5 @@ edition = "2024"
 crate-type = ["cdylib"]
 
 [dependencies]
-aos-wasm-sdk = { path = "../../../crates/aos-wasm-sdk" }
+aos-wasm-sdk = { path = "../../../../aos-wasm-sdk" }
 serde = { version = "1", features = ["derive"] }
