--- a/crates/aos-smoke/fixtures/01-hello-timer/reducer/Cargo.toml
+++ b/crates/aos-smoke/fixtures/01-hello-timer/reducer/Cargo.toml
@@ -9,6 +9,6 @@ edition = "2024"
 crate-type = ["cdylib"]
 
 [dependencies]
-aos-wasm-sdk = { path = "../../../crates/aos-wasm-sdk" }
+aos-wasm-sdk = { path = "../../../../aos-wasm-sdk" }
 serde = { version = "1", default-features = false, features = ["derive", "alloc"] }
 serde_cbor = { version = "0.11", default-features = false, features = ["alloc"] }
