--- a/crates/aos-smoke/fixtures/03-fetch-notify/reducer/Cargo.toml
+++ b/crates/aos-smoke/fixtures/03-fetch-notify/reducer/Cargo.toml
@@ -9,6 +9,6 @@ edition = "2024"
 crate-type = ["cdylib"]
 
 [dependencies]
-aos-wasm-sdk = { path = "../../../crates/aos-wasm-sdk" }
+aos-wasm-sdk = { path = "../../../../aos-wasm-sdk" }
 serde = { version = "1", features = ["derive"] }
 serde_cbor = "0.11"
