--- a/crates/aos-smoke/fixtures/05-chain-comp/reducer/Cargo.toml
+++ b/crates/aos-smoke/fixtures/05-chain-comp/reducer/Cargo.toml
@@ -9,7 +9,7 @@ edition = "2024"
 crate-type = ["cdylib"]
 
 [dependencies]
-aos-wasm-sdk = { path = "../../../crates/aos-wasm-sdk" }
+aos-wasm-sdk = { path = "../../../../aos-wasm-sdk" }
 indexmap = "2"
 serde = { version = "1", features = ["derive"] }
 serde_cbor = "0.11"
