--- a/crates/aos-smoke/fixtures/08-retry-backoff/reducer/Cargo.toml
+++ b/crates/aos-smoke/fixtures/08-retry-backoff/reducer/Cargo.toml
@@ -9,7 +9,7 @@ edition = "2024"
 crate-type = ["cdylib", "rlib"]
 
 [dependencies]
-aos-wasm-sdk = { path = "../../../crates/aos-wasm-sdk" }
+aos-wasm-sdk = { path = "../../../../aos-wasm-sdk" }
 serde = { version = "1", default-features = false, features = ["derive", "alloc"] }
 serde_json = { version = "1", default-features = false, features = ["alloc"] }
 serde_cbor = { version = "0.11", default-features = false, features = ["alloc"] }
