--- a/crates/aos-smoke/fixtures/09-workspaces/reducer/Cargo.toml
+++ b/crates/aos-smoke/fixtures/09-workspaces/reducer/Cargo.toml
@@ -9,6 +9,6 @@ edition = "2024"
 crate-type = ["cdylib"]
 
 [dependencies]
-aos-sys = { path = "../../../crates/aos-sys" }
-aos-wasm-sdk = { path = "../../../crates/aos-wasm-sdk" }
+aos-sys = { path = "../../../../aos-sys" }
+aos-wasm-sdk = { path = "../../../../aos-wasm-sdk" }
 serde = { version = "1", features = ["derive"] }
