--- a/crates/aos-host/Cargo.toml
+++ b/crates/aos-host/Cargo.toml
@@ -9,7 +9,7 @@ edition = "2024"
 default = ["adapter-http", "adapter-llm"]
 adapter-http = ["reqwest", "url"]
 adapter-llm = ["aos-llm"]
-test-fixtures = ["aos-air-exec", "aos-wasm-abi", "indexmap", "wat", "sha2"]
+e2e-tests = ["aos-air-exec", "aos-wasm-abi", "indexmap", "wat", "sha2"]
 
 [dependencies]
 aos-kernel = { path = "../aos-kernel" }
@@ -23,7 +23,7 @@ aos-llm = { path = "../aos-llm", optional = true }
 walkdir = "2"
 log = "0.4"
 
-# Optional dependencies for test-fixtures feature
+# Optional dependencies for e2e-tests feature
 aos-air-exec = { path = "../aos-air-exec", optional = true }
 aos-wasm-abi = { path = "../aos-wasm-abi", optional = true }
 indexmap = { version = "2", optional = true }
@@ -61,3 +61,11 @@ serde_bytes = "0.11"
 aos-wasm-build = { path = "../aos-wasm-build" }
 camino = "1"
 dotenvy = "0.15"
+
+[[test]]
+name = "demiurge_introspect_manifest_e2e"
+path = "tests_e2e/demiurge_introspect_manifest_e2e.rs"
+
+[[test]]
+name = "cap_enforcer_e2e"
+path = "tests_e2e/cap_enforcer_e2e.rs"
