--- a/crates/aos-host/Cargo.toml
+++ b/crates/aos-host/Cargo.toml
@@ -69,3 +69,7 @@ path = "tests_e2e/demiurge_introspect_manifest_e2e.rs"
 [[test]]
 name = "cap_enforcer_e2e"
 path = "tests_e2e/cap_enforcer_e2e.rs"
+
+[[test]]
+name = "workspace_e2e"
+path = "tests_e2e/workspace_e2e.rs"
