--- a/crates/aos-smoke/Cargo.toml
+++ b/crates/aos-smoke/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2024"
 [dependencies]
 anyhow = "1"
 aos-air-types = { path = "../aos-air-types" }
+aos-agent-sdk = { path = "../aos-agent-sdk" }
 aos-cbor = { path = "../aos-cbor" }
 aos-kernel = { path = "../aos-kernel" }
 aos-store = { path = "../aos-store" }
