--- a/apps/demiurge/air/manifest.air.json
+++ b/apps/demiurge/air/manifest.air.json
@@ -2,6 +2,9 @@
   "$kind": "manifest",
   "schemas": [
     {
+      "name": "aos.agent/SessionId@1"
+    },
+    {
       "name": "demiurge/ChatRole@1"
     },
     {
