--- a/crates/aos-smoke/fixtures/20-agent-session/air/manifest.air.json
+++ b/crates/aos-smoke/fixtures/20-agent-session/air/manifest.air.json
@@ -10,6 +10,14 @@
     { "name": "aos.agent/ActiveToolBatch@1" },
     { "name": "aos.agent/RunLease@1" },
     { "name": "aos.agent/ReasoningEffort@1" },
+    { "name": "aos.agent/WorkspaceBinding@1" },
+    { "name": "aos.agent/WorkspaceApplyMode@1" },
+    { "name": "aos.agent/WorkspaceSnapshot@1" },
+    { "name": "aos.agent/WorkspaceSyncRequested@1" },
+    { "name": "aos.agent/WorkspaceSyncUnchanged@1" },
+    { "name": "aos.agent/WorkspaceSnapshotReady@1" },
+    { "name": "aos.agent/WorkspaceSyncFailed@1" },
+    { "name": "aos.agent/WorkspaceApplyRequested@1" },
     { "name": "aos.agent/SessionConfig@1" },
     { "name": "aos.agent/RunConfig@1" },
     { "name": "aos.agent/SessionLifecycle@1" },
