--- a/crates/aos-agent-sdk/Cargo.toml
+++ b/crates/aos-agent-sdk/Cargo.toml
@@ -20,6 +20,7 @@ aos-wasm-sdk = { path = "../aos-wasm-sdk" }
 aos-wasm-abi = { path = "../aos-wasm-abi" }
 serde = { version = "1", features = ["derive"] }
 serde_cbor = "0.11"
+serde_json = { version = "1", default-features = false, features = ["alloc"] }
 
 [dev-dependencies]
 aos-effects = { path = "../aos-effects" }
