--- a/crates/aos-agent-sdk/Cargo.toml
+++ b/crates/aos-agent-sdk/Cargo.toml
@@ -19,6 +19,7 @@ path = "src/bin/session_event_echo.rs"
 aos-wasm-sdk = { path = "../aos-wasm-sdk" }
 aos-wasm-abi = { path = "../aos-wasm-abi" }
 serde = { version = "1", features = ["derive"] }
+serde_bytes = "0.11"
 serde_cbor = "0.11"
 serde_json = { version = "1", default-features = false, features = ["alloc"] }
 
