--- a/crates/aos-smoke/fixtures/11-plan-runtime-hardening/air/manifest.air.json
+++ b/crates/aos-smoke/fixtures/11-plan-runtime-hardening/air/manifest.air.json
@@ -1,22 +1,19 @@
 {
   "$kind": "manifest",
+  "air_version": "1",
   "schemas": [
+    { "name": "demo/FlowRequest@1" },
     { "name": "demo/FlowState@1" },
     { "name": "demo/RuntimeHardeningStart@1" },
     { "name": "demo/ApprovalEvent@1" },
-    { "name": "demo/WorkerUrl@1" },
-    { "name": "demo/WorkerResult@1" },
-    { "name": "demo/FlowCompleted@1" },
+    { "name": "demo/RuntimeHardeningEvent@1" },
+    { "name": "sys/EffectReceiptEnvelope@1" },
     { "name": "sys/HttpRequestParams@1" },
     { "name": "sys/HttpRequestReceipt@1" }
   ],
   "modules": [
-    { "name": "demo/FlowTracker@1" }
-  ],
-  "plans": [
-    { "name": "demo/core_runtime_hardening@1" },
-    { "name": "demo/_internal_wait_approval@1" },
-    { "name": "demo/_internal_worker_fetch@1" }
+    { "name": "demo/FlowTracker@1" },
+    { "name": "sys/CapEnforceHttpOut@1" }
   ],
   "caps": [
     { "name": "demo/http_fetch_cap@1" }
@@ -48,22 +45,13 @@
     ]
   },
   "routing": {
-    "events": [
+    "subscriptions": [
       {
-        "event": "demo/FlowCompleted@1",
-        "reducer": "demo/FlowTracker@1"
+        "event": "demo/RuntimeHardeningEvent@1",
+        "module": "demo/FlowTracker@1"
       }
-    ],
-    "inboxes": []
+    ]
   },
-  "triggers": [
-    {
-      "event": "demo/RuntimeHardeningStart@1",
-      "plan": "demo/core_runtime_hardening@1",
-      "correlate_by": "request_id"
-    }
-  ],
-  "air_version": "1",
   "effects": [
     { "name": "sys/http.request@1" }
   ]
