--- a/crates/aos-smoke/fixtures/10-trace-failure-classification/air.cap_deny/manifest.air.json
+++ b/crates/aos-smoke/fixtures/10-trace-failure-classification/air.cap_deny/manifest.air.json
@@ -1,71 +1,27 @@
 {
   "$kind": "manifest",
+  "air_version": "1",
   "schemas": [
-    {
-      "name": "demo/FetchNotifyPc@1"
-    },
-    {
-      "name": "demo/FetchNotifyState@1"
-    },
-    {
-      "name": "demo/FetchNotifyStart@1"
-    },
-    {
-      "name": "demo/FetchNotifyComplete@1"
-    },
-    {
-      "name": "demo/FetchNotifyEvent@1"
-    },
-    {
-      "name": "demo/FetchRequest@1"
-    },
-    {
-      "name": "sys/BlobPutParams@1"
-    },
-    {
-      "name": "sys/BlobPutReceipt@1"
-    },
-    {
-      "name": "sys/BlobGetParams@1"
-    },
-    {
-      "name": "sys/BlobGetReceipt@1"
-    },
-    {
-      "name": "sys/BlobPutResult@1"
-    },
-    {
-      "name": "sys/BlobGetResult@1"
-    },
-    {
-      "name": "sys/HttpRequestParams@1"
-    },
-    {
-      "name": "sys/HttpRequestReceipt@1"
-    }
+    { "name": "demo/FetchNotifyPc@1" },
+    { "name": "demo/FetchNotifyState@1" },
+    { "name": "demo/FetchNotifyStart@1" },
+    { "name": "demo/FetchNotifyEvent@1" },
+    { "name": "sys/EffectReceiptEnvelope@1" },
+    { "name": "sys/HttpRequestParams@1" },
+    { "name": "sys/HttpRequestReceipt@1" }
   ],
   "modules": [
-    {
-      "name": "demo/FetchNotify@1"
-    },
-    {
-      "name": "sys/CapEnforceHttpOut@1"
-    }
+    { "name": "demo/FetchNotify@1" },
+    { "name": "sys/CapEnforceHttpOut@1" }
   ],
-  "plans": [
-    {
-      "name": "demo/fetch_plan@1"
-    }
+  "effects": [
+    { "name": "sys/http.request@1" }
   ],
   "caps": [
-    {
-      "name": "demo/http_fetch_cap@1"
-    }
+    { "name": "demo/http_fetch_cap@1" }
   ],
   "policies": [
-    {
-      "name": "demo/http-policy@1"
-    }
+    { "name": "demo/http-policy@1" }
   ],
   "defaults": {
     "policy": "demo/http-policy@1",
@@ -77,16 +33,12 @@
           "record": {
             "hosts": {
               "set": [
-                {
-                  "text": "blocked.example"
-                }
+                { "text": "blocked.example" }
               ]
             },
             "methods": {
               "set": [
-                {
-                  "text": "GET"
-                }
+                { "text": "GET" }
               ]
             }
           }
@@ -95,31 +47,11 @@
     ]
   },
   "routing": {
-    "events": [
+    "subscriptions": [
       {
         "event": "demo/FetchNotifyEvent@1",
-        "reducer": "demo/FetchNotify@1"
+        "module": "demo/FetchNotify@1"
       }
-    ],
-    "inboxes": []
-  },
-  "triggers": [
-    {
-      "event": "demo/FetchRequest@1",
-      "plan": "demo/fetch_plan@1",
-      "correlate_by": "request_id"
-    }
-  ],
-  "air_version": "1",
-  "effects": [
-    {
-      "name": "sys/http.request@1"
-    },
-    {
-      "name": "sys/blob.put@1"
-    },
-    {
-      "name": "sys/blob.get@1"
-    }
-  ]
+    ]
+  }
 }
