--- a/crates/aos-smoke/fixtures/09-workspaces/air/manifest.air.json
+++ b/crates/aos-smoke/fixtures/09-workspaces/air/manifest.air.json
@@ -1,14 +1,13 @@
 {
   "$kind": "manifest",
+  "air_version": "1",
   "schemas": [
     { "name": "demo/WorkspaceSummary@1" },
+    { "name": "demo/WorkspaceStep@1" },
     { "name": "demo/WorkspaceState@1" },
     { "name": "demo/WorkspaceStart@1" },
-    { "name": "demo/WorkspaceSeed@1" },
-    { "name": "demo/WorkspaceSeeded@1" },
     { "name": "demo/WorkspaceEvent@1" },
-    { "name": "sys/WorkspaceName@1" },
-    { "name": "sys/WorkspaceHistory@1" },
+    { "name": "sys/EffectReceiptEnvelope@1" },
     { "name": "sys/WorkspaceCommitMeta@1" },
     { "name": "sys/WorkspaceCommit@1" },
     { "name": "sys/WorkspaceRef@1" },
@@ -16,17 +15,9 @@
     { "name": "sys/WorkspaceResolveReceipt@1" },
     { "name": "sys/WorkspaceEmptyRootParams@1" },
     { "name": "sys/WorkspaceEmptyRootReceipt@1" },
-    { "name": "sys/WorkspaceAnnotationsPatch@1" },
-    { "name": "sys/WorkspaceAnnotationsSetParams@1" },
-    { "name": "sys/WorkspaceAnnotationsSetReceipt@1" },
     { "name": "sys/WorkspaceListParams@1" },
     { "name": "sys/WorkspaceListEntry@1" },
     { "name": "sys/WorkspaceListReceipt@1" },
-    { "name": "sys/WorkspaceReadRefParams@1" },
-    { "name": "sys/WorkspaceRefEntry@1" },
-    { "name": "sys/WorkspaceReadRefReceipt@1" },
-    { "name": "sys/WorkspaceReadBytesParams@1" },
-    { "name": "sys/WorkspaceReadBytesReceipt@1" },
     { "name": "sys/WorkspaceWriteBytesParams@1" },
     { "name": "sys/WorkspaceWriteBytesReceipt@1" },
     { "name": "sys/WorkspaceDiffParams@1" },
@@ -41,9 +32,6 @@
     { "name": "sys/Workspace@1" },
     { "name": "sys/CapEnforceWorkspace@1" },
     { "name": "sys/HttpPublish@1" }
-  ],
-  "plans": [
-    { "name": "demo/workspace_seed_plan@1" }
   ],
   "caps": [
     { "name": "demo/workspace_cap@1" }
@@ -81,29 +69,21 @@
     ]
   },
   "routing": {
-    "events": [
-      { "event": "demo/WorkspaceEvent@1", "reducer": "demo/WorkspaceDemo@1" },
+    "subscriptions": [
+      { "event": "demo/WorkspaceEvent@1", "module": "demo/WorkspaceDemo@1" },
       {
         "event": "sys/WorkspaceCommit@1",
-        "reducer": "sys/Workspace@1",
+        "module": "sys/Workspace@1",
         "key_field": "workspace"
       },
-      { "event": "sys/HttpPublishSet@1", "reducer": "sys/HttpPublish@1" }
-    ],
-    "inboxes": []
+      { "event": "sys/HttpPublishSet@1", "module": "sys/HttpPublish@1" }
+    ]
   },
-  "triggers": [
-    { "event": "demo/WorkspaceSeed@1", "plan": "demo/workspace_seed_plan@1" }
-  ],
-  "air_version": "1",
   "effects": [
     { "name": "sys/workspace.resolve@1" },
     { "name": "sys/workspace.empty_root@1" },
     { "name": "sys/workspace.write_bytes@1" },
     { "name": "sys/workspace.list@1" },
-    { "name": "sys/workspace.read_ref@1" },
-    { "name": "sys/workspace.read_bytes@1" },
-    { "name": "sys/workspace.diff@1" },
-    { "name": "sys/workspace.annotations_set@1" }
+    { "name": "sys/workspace.diff@1" }
   ]
 }
